Adding sign up link to the header

--- a/src/app/app-components/header-links/header-links.component.html
+++ b/src/app/app-components/header-links/header-links.component.html
@@ -22,6 +22,10 @@
       <a class="item" [hidden]="states.isSignedIn" routerLink="/signin">
         Sign in
       </a>
+      <!-- Signed up -->
+      <a class="item" [hidden]="states.isSignedIn" routerLink="/signup">
+        Sign up
+      </a>
     </div>
   </div>
 </nav>
