--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -63,6 +63,27 @@
     <!-- Editable -->
     <ng-container *ngIf="objects.length && objectsEditable">
       <div class="m_B-1x"><label>Permissions</label></div>
+      <!--<div class="background-light">-->
+        <!--<div class="let object of objects">-->
+          <!--<p><strong>{{object.function.val}}</strong></p>-->
+          <!--<div class="let permission of object.permission">-->
+            <!--<div class="usa-grid-full">-->
+              <!--<div class="usa-width-one-half">-->
+                <!--<span *ngFor="let permission of object.permission" class="permission-control-group">-->
+                  <!--<input [disabled]="permission.isDefault" [attr.id]="permissionId(permission, object)" type="checkbox" class="permission-input" [ngModel]="!permission.notChecked" (click)="onPermissionClick(permission)">-->
+                  <!--<label [attr.for]="permissionId(permission, object)" class="permission-label" >{{permission.val}}</label>-->
+                <!--</span>-->
+              <!--</div>-->
+              <!--<div class="usa-width-one-half">-->
+                <!--<span *ngFor="let permission of object.permission" class="permission-control-group">-->
+                  <!--<input [disabled]="permission.isDefault" [attr.id]="permissionId(permission, object)" type="checkbox" class="permission-input" [ngModel]="!permission.notChecked" (click)="onPermissionClick(permission)">-->
+                  <!--<label [attr.for]="permissionId(permission, object)" class="permission-label" >{{permission.val}}</label>-->
+                <!--</span>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
       <ul class="usa-grid-full usa-unstyled-list background-light p_All-4x">
         <li  *ngFor="let object of objects" class="object-item">
           <strong>{{object.function.val}}</strong>
