Fix defects for AAC request and create org page

--- a/src/app/organization-detail/AAC-confirm/AAC-confirm.template.html
+++ b/src/app/organization-detail/AAC-confirm/AAC-confirm.template.html
@@ -1,7 +1,7 @@
-<section class="usa-grid-full aac-confirm-page relative">
+<section class="usa-grid-full aac-confirm-page">
   <div class="usa-width-one-fourth">&nbsp;</div>
   <div class="usa-width-two-thirds">
-    <h2 class="p_T-3x">Confirm AAC Request</h2>
+    <h2 class="p_T-3x">AAC Request Details</h2>
     <div class="usa-width-one-whole aac-confirm-div-underline">
       <p class="p_T-3x p_B-4x">Lorum ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -39,6 +39,4 @@
       </p>
     </div>
   </div>
-
-  <samAlert *ngIf="successAlertMsg" class="aac-confirm-alert-message" [showClose]="true" [type]="'success'" [title]="'Success'" [description]="'Your AAC Request has been submitted'"></samAlert>
 </section>
