--- a/src/app/organization-detail/AAC-request/AAC-request.template.html
+++ b/src/app/organization-detail/AAC-request/AAC-request.template.html
@@ -1,4 +1,4 @@
-<section class="aac-request-page usa-grid relative">
+<section class="aac-request-page usa-grid" (keyup.enter)="onEnterKeyClicked()">
   <div class="usa-width-one-fourth">&nbsp;</div>
 
   <!--Edit AAC Request Page-->
