--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -202,17 +202,15 @@
 
         <!--Entity Name - DUNS Filter-->
         <sam-collapsible [label]="'Entity Name/UEI'" [startOpened]="true" *ngIf="index==='fpds' || index === 'opp' || index === 'ent'">
-          <labelWrapper class="sam-list-input">
-            <sam-autocomplete class="search-bar sam-autocomplete-width usa-regional-filter" autofill-entityduns
+          <labelWrapper class="sam-list-input usa-award-filter">
+            <sam-autocomplete class="search-bar sam-autocomplete-width" autofill-entityduns
               [name]="'Test'"
               [id]="name + 'autocompletecomponent'"
               [config]="dunsConfiguration"
               [(ngModel)]="dunsModel"
               [showClearButton]="true">
             </sam-autocomplete>
-
             <sam-list-display
-
               [config]="dunsConfiguration"
               [newValue]="dunsModel"
               [(ngModel)]="dunsModelList"
@@ -245,22 +243,22 @@
       </p>
     </div>
     <div class="usa-width-one" *ngIf="wdSubjectToCBAModel !== 'yesBasedCBA' && wdSubjectToCBAModel !== 'yesUnbasedCBA'">
-      
+
       <fh-featured-result *ngFor="let row of featuredData.featuredResult" [data]="row" [qParams]="qParams"></fh-featured-result>
-      
+
       <strong>
         <list-results-message *ngIf="totalCount > 0 && wdSubjectToCBAModel !== 'yesBasedCBA' && wdSubjectToCBAModel !== 'yesUnbasedCBA'"[showing]="10" [currentPage]="pageNum+1" [total]="totalCount" [suffix]="listMessageSuffix"></list-results-message>
       </strong>
-      
+
       <div class="sam-ui hidden divider"></div>
-      
+
       <div id="search-results">
         <div tabindex="-1" *ngFor="let row of data.results">
-          
+
           <opportunities-result *ngIf="row._type=='opportunity'" class="usa-grid-full" [data]="row" [qParams]="qParams"></opportunities-result>
-          
+
           <assistance-listing-result  *ngIf="row._type=='assistanceListing'" [data]="row" [qParams]="qParams"></assistance-listing-result>
-          
+
           <federal-hierarchy-result  *ngIf="row._type=='federalOrganization'" class="usa-grid-full" [data]="row" [qParams]="qParams"></federal-hierarchy-result>
           <entities-result *ngIf="row._type=='entity'" class="usa-grid-full" [data]="row" [qParams]="qParams"></entities-result>
           <exclusions-result *ngIf="row._type=='exclusion'" class="usa-grid-full" [data]="row" [qParams]="qParams"></exclusions-result>
