--- a/src/sam-ui-elements-src/ui-kit/components/header/header.template.html
+++ b/src/sam-ui-elements-src/ui-kit/components/header/header.template.html
@@ -1,10 +1,5 @@
 <header>
-  <nav class="usa-grid-full" aria-label="Main navigation">
-    <div class="usa-width-one-fourth align-top">
-      <ul class="usa-grid usa-unstyled-list">
-        <li><a class="logo-link" tabindex="0" (click)="refreshPage()" (keyup.enter)="refreshPage()"><img src="src/assets/img/transition-sam-logo.png"  alt="Transition.sam.gov Logo"></a></li> 
-      </ul>
-    </div>
+  <nav aria-label="Main navigation">
     <ng-content select="[header-links]"></ng-content>
   </nav>
 </header>
