remove sidenav from grant/edit/request access pages

--- a/src/app/users/public/public.component.html
+++ b/src/app/users/public/public.component.html
@@ -1,5 +1,5 @@
 <div class="public-profile-page usa-grid usa-authentication">
-  <aside class="usa-width-one-fourth" *ngIf="!hideNav">
+  <aside class="usa-width-one-fourth">
     <h1 class="user-name">{{userName}}</h1>
     <ul class="usa-sidenav-list">
       <li>
