--- a/src/styles/pages/_grant-access.scss
+++ b/src/styles/pages/_grant-access.scss
@@ -1,6 +1,11 @@
 .grant-access-page {
   .organization-container {
-    min-width: 380px;
+    label {
+      max-width: 58rem;
+    }
+
+    max-width: 58rem;
+    margin-top: 2.5rem;
   }
 
   .background-light {
