CSS changes to match search template

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -220,7 +220,7 @@
           <button (click)='dunsFilterClear()'>Clear</button>
         </sam-collapsible>
 
-        <hr>
+        <div class ="sam-ui section divider"></div>
         <button (click)='clearAllFilters()'>Clear All</button>
 
 
